<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>parent</artifactId>
        <groupId>org.scribble</groupId>
        <version>0.5.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>scribble-gt</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <!-- duplicated from scribble-assertions -->
    <dependencies>
        <dependency>
            <groupId>org.scribble</groupId>
            <artifactId>scribble-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scribble</groupId>
            <artifactId>scribble-parser</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scribble</groupId>
            <artifactId>scribble-cli</artifactId>
        </dependency>
        <dependency>
            <groupId>org.scribble</groupId>
            <artifactId>scribble-test</artifactId>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>org.scribble</groupId>-->
<!--            <artifactId>scribble-test</artifactId>-->
<!--            &lt;!&ndash; FIXME: version? &ndash;&gt;-->
<!--            <version>${project.version}</version>-->
<!--            <type>test-jar</type>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>RELEASE</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.freemarker</groupId>
            <artifactId>freemarker</artifactId>
            <version>2.3.32</version> <!-- Ensure this version is consistent if specified in parent's dependencyManagement -->
        </dependency>
    </dependencies>


    <!-- duplicated from scribble-assertions -->
    <build>
        <plugins>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr3-maven-plugin</artifactId>
                <version>${antlr.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- "Overrides" parent pom settings -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/*.g</exclude>
                        <exclude>**/*.java</exclude>
                        <exclude>**/*.scr</exclude>
                        <exclude>**/IGNORE</exclude>
                        <exclude>**/*.policy</exclude>
                        <exclude>**/*.xml</exclude>
                        <exclude>**/*.html</exclude>
                        <exclude>**/stylesheet.css</exclude>
                        <exclude>**/script.js</exclude>
                        <exclude>**/package-list</exclude>
                        <exclude>**/*.txt</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
